--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations
 TITLE = 'Azure Color Leap Voting App'
-VOTE1VALUE = 'Blue'
-VOTE2VALUE = 'Green'
+VOTE1VALUE = 'Blue Monkey'
+VOTE2VALUE = 'Green Mountain'
 SHOWHOST = 'false'
